[gd_scene load_steps=2 format=3 uid="uid://chg1hognome44"]

[ext_resource type="Script" path="res://Scripts/Spawner.gd" id="1_52rim"]

[node name="Spawner" type="Node2D"]
position = Vector2(225, -60)
script = ExtResource("1_52rim")

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerupSpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="PowerupSpawnTimer" to="." method="_on_powerup_spawn_timer_timeout"]
